class Quiz < ApplicationRecord
    set_table_name "quizzes"
end

