@startuml
class User {
  username : string,
  password : string,
  email : string,
  first_name : string,
  last_name : string
  type : type,
}

class Teacher
class Student
class Admin

class Course {
  course_name : string,
  course_code : string,
  capacity : string,
  semester_id : ID,
  teacher_id : ID,
  department_id : ID,
}

class Department {
  name : string
}

class Semester {
  name : string,
  start_date : datetime,
  end_date : datetime,
  registration_deadline : datetime
}

abstract Activity {
  name : string,
  course_id : ID
}

class AnnouncementManager {
  course_id : ID
}

abstract Resource {
  type: string
}

abstract Deliverable {
  weight : float,
  proctored? : boolean
  type : string
}

class Tutorial
class Quiz {
  time_opened : string,
  time_closed : string,
  allotted_time : string,
  type : string
}

class Assignment {
  due_date : datetime,
  submission_type : string,
}

class Announcement {
  announcement_content : string,
  pinned? : boolean,
  announcement_manager_id : ID,
}

class Subscription {
  student_id : ID,
  announcement_manager_id : ID,
}

class CourseRegistration {
  status : string,
  course_id : ID,
  student_id : ID,
}

class UserRegistration {
  status : string,
  user_type : string,
  user_id : ID,
}

Teacher -- Course
Department -- Course
Semester -- Course
AnnouncementManager -- Announcement
AnnouncementManager -- Subscription
User -- UserRegistration
Course -- AnnouncementManager
Course -- Activity
Course -- CourseRegistration
Student -- CourseRegistration
User -- Notification

abstract Notification {
  user_id : ID,
  message : string,
}

class Teacher extends User
class Student extends User
class Admin extends User
Activity <|.. Resource
Resource <|.. Video
Resource <|.. URL
Resource <|.. Document
Activity <|.. Deliverable
Deliverable <|.. Tutorial
Deliverable <|.. Quiz
Deliverable <|.. Assignment
Notification <|.. EmailNotification
Notification <|.. WebNotification
Notification <|.. TextNotification

@enduml
